--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,96 @@
+# хелп по хоткеям 
+# !  вынесть панель в окно
+# $  переименовать текущую сессию
+# () переключение сессий
+# ,  переименование окна
+# ;  перейти на последнюю активную панель
+# q  отобразить номера панелей (вводя номер переключимся на этот номер)
+# x  убить текущую панельй
+
+# хелп по статусу 
+# #H - имя хоста
+# #h - имя хоста кратко
+# #F - флаги окна
+# #D - id панели
+# #T - имя панели
+# #I - номер окна
+# #P - номер панели
+# #W - имя окна
+# %Y-%m-%d %H:%M:%S - дата и время
+# #{pane_current_path} - текущая директория
+# #{pane_tty} - номер псевдотерминала
+
+
+# Gruvbox colors
+# "#1d2021" # ----
+# "#3c3836" # ---
+# "#504945" # --
+# "#665c54" # -
+# "#bdae93" # +
+# "#d5c4a1" # ++
+# "#ebdbb2" # +++
+# "#fbf1c7" # ++++
+# "#fb4934" # red
+# "#fe8019" # orange
+# "#fabd2f" # yellow
+# "#b8bb26" # green
+# "#8ec07c" # aqua/cyan
+# "#83a598" # blue
+# "#d3869b" # purple
+# "#d65d0e" # brown
+
+# Github colors
+# "#f5f5f5" 
+# "#c8c8fa" 
+# "#969896" 
+# "#e8e8e8" 
+# "#333333" 
+# "#ffffff" 
+# "#ed6a43" 
+# "#0086b3" 
+# "#795da3" 
+# "#183691" 
+# "#795da3" 
+# "#a71d5d" 
+
+# Onedark colors
+# "#282c34"
+# "#353b45"
+# "#3e4451"
+# "#545862"
+# "#565c64"
+# "#abb2bf"
+# "#b6bdca"
+# "#c8ccd4"
+# "#e06c75"
+# "#d19a66"
+# "#e5c07b"
+# "#98c379"
+# "#56b6c2"
+# "#61afef"
+# "#c678dd"
+# "#be5046"
+
+# Material colors
+# "#212121"
+# "#303030"
+# "#353535"
+# "#4A4A4A"
+# "#B2CCD6"
+# "#EEFFFF"
+# "#EEFFFF"
+# "#FFFFFF"
+# "#F07178"
+# "#F78C6C"
+# "#FFCB6B"
+# "#C3E88D"
+# "#89DDFF"
+# "#82AAFF"
+# "#C792EA"
+# "#FF5370"
+
 # 256 colors in terminal
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # Remap prefix from 'C-b' to 'C-a'
 unbind C-b
@@ -35,8 +126,7 @@ bind-key v split-window -h
 bind-key h split-window -v
 
 # Message
-set -g message-style fg=black,bg=yellow
-set -g message-style fg=black,bg=yellow
+set -g message-style fg=colour231,bg='#333333'
 set -g message-command-style fg=yellow,bg=black
 
 # Easy config reload
@@ -44,38 +134,46 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 
 ############################# Status bar settings ##################################
 
+bind-key b set-option status
 set -g display-time 1200
 set -g renumber-windows on
 set -g status-position top
 set -g status-justify left
 set -g status-interval 1
 set -g status-style 'bg=colour239 fg=colour231'
-set -g status-left '[#S]  '
+set -g status-left '«#S» '
 set -g status-left-style default
 set -g status-left-length 30
-set -g status-right '#[fg=colour231] %H:%M:%S '
+set -g status-right '#[fg=colour231]#{pane_current_path} ♔ #{pane_tty} ⚛  %H:%M:%S '
 set -g status-right-style default
 set -g status-right-length 70
-
 set -g pane-border-style 'fg=colour239'
 set -g pane-active-border-style 'fg=colour15'
 
+#set -g pane-border-format
+
 #setw -g window-status-style 'fg=colour22 bg=colour184'
 #setw -g window-status-current-style 'fg=colour28 bg=colour184'
+
+#setw -g window-status-format 'fg=colour22 bg=colour184'
 #setw -g window-status-current-format '#I#[fg=colour28]:#[fg=colour28]#W#[fg=colour28]#F'
+
+#set -g status-justify [left|centre|right]
+#set -g status-left '...'
+#setw -g window-status-style
+#setw -g window-status-activity-style
+#setw -g window-status-bell-style
+#setw -g window-status-content-style
+#setw -g window-status-current-style
+#setw -g window-status-last-style
+#setw -g window-status-format
+#setw -g window-status-current-format
+#setw -g window-status-separator
 
 ############################### List of plugins ####################################
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
-# Reload TMUX environment
-# tmux source ~/.tmux.conf
 
 # Press <prefix + I> to fetch plugin into ~/.tmux/plugins
 # Press <prefix + U> to update plugin 
